# receipts_and_insights-backend

./: .gitignore  .pre-commit-config.yaml  Caddyfile  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt  secrets.env
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_add_user_sessions_table.py  001_initial_schema.py  002_add_photos_table.py
app/: __init__.py  config.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  photos.py  users.py
app/core/: __init__.py  database.py  middleware.py  security.py
app/models/: __init__.py  photo.py  user.py  user_session.py
app/schemas/: __init__.py  photo.py  user.py
app/utils/: email.py  photo.py  user.py
scripts/: format_files.sh
tests/: conftest.py  test_auth.py  test_main.py  test_photos.py  test_users.py
