[tool.poetry]
name = "receipts-and-insights-backend"
version = "0.1.0"
description = "Backend API for Receipts and Insights"
authors = ["Brandon Potts <bepotts47@gmail.com>"]
readme = "README.md"
license = "MIT"

# This disables installing the project as a package
# Ideal for backend services / APIs
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

fastapi = "0.127.0"
uvicorn = { version = "0.40.0", extras = ["standard"] }
SQLAlchemy = "2.0.45"
pydantic = "2.12.5"
python-dotenv = "1.2.1"
annotated-doc = "0.0.4"
annotated-types = "0.7.0"
typing-extensions = "4.15.0"
typing-inspection = "0.4.2"
anyio = "4.12.0"
idna = "3.11"
starlette = "0.50.0"
exceptiongroup = "1.3.1"
pydantic-core = "2.41.5"
httpx = "^0.28.1"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.9.0"
flake8 = ">=6.1.0"
mypy = ">=1.6.0"
isort = ">=5.12.0"
poethepoet = "^0.39.0"
ruff = "^0.14.10"

[tool.poetry.scripts]
# Application startup commands
start = "app.main:main"

# -------------------------
# Tooling configuration
# -------------------------

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=html --cov-report=term-missing"
markers = [
    "testFastAPIApp: marks tests for FastAPI application instance",
    "testMainFunction: marks tests for main() function",
    "testAppEndpoints: marks tests for app endpoints and routing",
    "testUserEndpoints: marks tests for user endpoints",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.poe.tasks]
start = "uvicorn app.main:app --reload"
test = "pytest"
lint = "ruff check ."
format = { shell = "black . && isort ." }
format-files = { script = "scripts/format_files.sh", help = "Format specific Python files with black and isort" }

