[project]
name = "receipts-and-insights-backend"
version = "0.1.0"
description = "Backend API for Receipts and Insights"
authors = [
    { name = "Brandon Potts", email = "bepotts47@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi==0.127.0",
    "uvicorn[standard]==0.40.0",
    "SQLAlchemy==2.0.45",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "passlib[argon2]>=1.7.4,<2.0.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "anyio==4.12.0",
    "idna==3.11",
    "starlette==0.50.0",
    "exceptiongroup==1.3.1",
    "pydantic-core==2.41.5",
    "argon2-cffi>=25.1.0,<26.0.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
]

# -------------------------
# Tooling configuration
# -------------------------

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=html --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.handlers.argon2",
]
markers = [
    "testFastAPIApp: marks tests for FastAPI application instance",
    "testMainFunction: marks tests for main() function",
    "testAppEndpoints: marks tests for app endpoints and routing",
    "testUserEndpoints: marks tests for user endpoints",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.poe.tasks]
start = "uvicorn app.main:app --reload"
test = "pytest"
lint = "ruff check ."
format = "ruff format ."

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "isort>=5.12.0",
    "poethepoet>=0.39.0,<0.40.0",
    "ruff>=0.14.10,<0.15.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.45",
]

